--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>uHost</title>
         <link rel="shortcut icon" href="favicon.png" />
+        <link rel="stylesheet" href="shared.css" />
         <link rel="stylesheet" href="main.css" />
     </head>
 
@@ -34,21 +35,21 @@
             <section id="plans">
                 <h1 class="section-title" >choose your plan.</h1>
                 
-                <div>
-        <article class="plan">
-            <h1 class="plan__title" >FREE</h1>
-            <h2 class="plan__price" >$0/month</h2>
-            <h3>For hobby projects or small teams.</h3>
-            <ul class="plan__features" >
-                <li class="plan__feature" >1 Workspace</li>
-                <li class="plan__feature" >Unlimited Traffic</li>
-                <li class="plan__feature" >10GB Storage</li>
-                <li class="plan__feature" >Basic Support</li>
-            </ul>
-            <div>
-                <button class="button" >CHOOSE PLAN</button>
-            </div>
-        </article>
+                <div class="plan__list">
+                    <article class="plan">
+                        <h1 class="plan__title" >FREE</h1>
+                        <h2 class="plan__price" >$0/month</h2>
+                        <h3>For hobby projects or small teams.</h3>
+                        <ul class="plan__features" >
+                            <li class="plan__feature" >1 Workspace</li>
+                            <li class="plan__feature" >Unlimited Traffic</li>
+                            <li class="plan__feature" >10GB Storage</li>
+                            <li class="plan__feature" >Basic Support</li>
+                        </ul>
+                    <div>
+                        <button class="button ripple" >CHOOSE PLAN</button>
+                    </div>
+                    </article>
         <article class="plan plan--highlighted">
             <h1 class="plan__annotation">RECOMMENDED</h1>
             <h1 class="plan__title">PLUS</h1>
@@ -61,7 +62,7 @@
                 <li class="plan__feature" >Plus Support</li>
             </ul>
             <div>
-                <button class="button">CHOOSE PLAN</button>
+                <button class="button ripple">CHOOSE PLAN</button>
             </div>
         </article>
         <article class="plan ">
@@ -75,7 +76,7 @@
                 <li class="plan__feature" >Priority Support</li>
             </ul>
             <div>
-                <button class="button">CHOOSE PLAN</button>
+                <button class="button ripple">CHOOSE PLAN</button>
             </div>
         </article>
             </section>
@@ -102,6 +103,7 @@
                     </li>
                 </ul>
             </section>
+        </div>
         </main>
         <footer class="main-footer">
             <nav>
