--- a/packages/index.html
+++ b/packages/index.html
@@ -10,10 +10,17 @@
     </head>
 
     <body>
+        <div class="backdrop"></div>
+
         <div class="background"></div>
         <header class="main-header">
-            <div class="main-header__brand">
-                <a href="../index.html"> uHost </a>
+            <div>
+                <a href="../index.html" class="main-header__brand">
+                    <img
+                        src="../images/uhost-icon.png"
+                        alt="uHost - Your favorite hosting company"
+                    />
+                </a>
             </div>
             <nav class="main-nav">
                 <ul class="main-nav__items">
